# ai-stack

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: pages.yml
code/ml/iris-classifier/: iris.py
code/ml/notebooks/: sample.ipynb
docs/: index.md
docs/projects/: iris-classifier.md  mini-chatgpt.md
projects/iris-classifier/: index.html
projects/mini-chatgpt/: index.html
search/: search_index.json
